# pbn-to-pdf

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  activity-log.json  build.rs
.github/workflows/: ci.yml  release.yml
docs/: AnalysisFormatting.md  BCFlags.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/config/: defaults.rs  mod.rs  settings.rs
src/model/: analysis.rs  auction.rs  bcflags.rs  board.rs  card.rs  commentary.rs  deal.rs  hand.rs  metadata.rs  mod.rs  play.rs
src/parser/: auction.rs  commentary.rs  deal.rs  header.rs  mod.rs  pbn.rs  play.rs  tags.rs
src/render/: bidding_table.rs  colors.rs  commentary.rs  document.rs  fonts.rs  glyph_collector.rs  hand_diagram.rs  layer.rs  layout.rs  mod.rs  page.rs  text_metrics.rs
src/render/components/: bidding_table.rs  commentary.rs  declarers_plan_small.rs  (+6 more)
tests/: integration_test.rs
tests/fixtures/: 2O1-1 exercises.pbn  ABS2-2 Promotion and Length exercises.pbn  ABS2-2 Promotion and Length practice deals.pbn  ABS2-4 Ruffing and Discarding exercises.pbn  ABS2-4 Ruffing and Discarding practice deals.pbn  ABS3-1 Opening Leads against Notrump Contracts practice deals-NS.pbn  ABS3-2 Opening Leads against Suit Contracts exercises.pbn  ABS4-1 Stayman exercises.pbn  ABS4-2 Jacoby Transfers exercises.pbn  ABS4-2 Jacoby Transfers practice deals-NS.pbn  Balancing Weak 2.pbn  Forcing 1NT - 3 - practice hands (5-8).pbn  Limit Raise of 1M.pbn  Negative Doubles practice deals - NS.pbn  Precision 1C Auctions with Notes.pbn  Slam Judgment practice deals.pbn  Stayman.pbn
(+12 files in other folders)
