[package]
name = "pbn-to-pdf"
version = "0.9.0"
edition = "2021"
description = "Convert PBN bridge files to PDF with Bridge Composer-style formatting"
license = "Unlicense"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
printpdf = { git = "https://github.com/fschutt/printpdf", rev = "1f30cafc", features = ["svg"] }
nom = "8.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
bridge-types = { git = "https://github.com/Rick-Wilson/bridge-types" }
lopdf = "0.35"  # PDF post-processing for compression

